--- a/jitsi-stack.yml
+++ b/jitsi-stack.yml
@@ -203,6 +203,9 @@ resources:
           - content: {get_file: enable-constraints.sed}
             path: /root/enable-constraints.sed
             permissions: 0644
+          - content: {get_file: enable-videoqual.sed}
+            path: /root/enable-videoqual.sed
+            permissions: 0644
           - content: {get_file: jvb-xmpp-domain.diff}
             path: /root/jvb-xmpp-domain.diff
             permissions: 0644
@@ -335,7 +338,7 @@ resources:
                   sed -i 's/^ENABLE_XMPP_WEBSOCKET=/#ENABLE_XMPP_WEBSOCKET=/' .env
                   sed -i 's/^ENABLE_COLIBRI_WEBSOCKET=/#ENABLE_COLIBRI_WEBSOCKET=/' .env
                   echo "ENABLE_XMPP_WEBSOCKET=enable_websocket" >> .env
-                  echo "ENABLE_COLIBRI_WEBSOCKET=enable_websocket" >> .env
+                  #echo "ENABLE_COLIBRI_WEBSOCKET=enable_websocket" >> .env
                   if test "enable_vp9" != "0"; then echo "ENABLE_CODEC_VP9=true" >> .env; fi
             path: /root/config-env.sh
             permissions: 0700
@@ -355,6 +358,7 @@ resources:
                   tweak_channelLastN: {get_param: tweak_channelLastN}
                   jigasi_sip_uri: {get_param: jigasi_sip_uri}
                   jigasi_default_room: {get_param: jigasi_default_room}
+                  enable_vp9: {get_param: enable_vp9}
                 template: |
                   #!/usr/bin/env bash
                   export USER=root
@@ -409,10 +413,10 @@ resources:
                      # TODO: Ensure Simulcast is NOT disabled
                      sed -i 's@^ */* *disableSimulcast:.*$@    disableSimulcast: false,@' $WEBCFG
                      # TODO: Add tweak to enableLayerSuspension
-                     sed -i 's@^ */* *enableLayerSuspension:.*$@    enableLayerSuspension: true,@' $WEBCFG
+                     #sed -i 's@^ */* *enableLayerSuspension:.*$@    enableLayerSuspension: true,@' $WEBCFG
                      # TODO: Allow SuspendVideo
                      #sed -i 's@^ */* *disableSuspendVideo:.*$@    disableSuspendVideo: false,@'  ~/.jitsi-meet-cfg/web/config.js
-                     # TODO: StartVideoMuted: 10 enablement
+                     # TODO: StartVideoMuted: 12 enablement
                   fi
                   if test -n "tweak_max_height" -a "tweak_max_height" != "0"; then
                      sed -i "s@^\([^/]*max:\)[ 0-9]*,\$@\1 tweak_max_height,@" $WEBCFG
@@ -430,6 +434,10 @@ resources:
                   fi
                   if test -n "jitsi_watermark_link"; then
                     sed -i "s@JITSI_WATERMARK_LINK: '.*'@JITSI_WATERMARK_LINK: 'jitsi_watermark_link'@" $WEBIFCFG
+                  fi
+                  if test -b "enable_vp9"; then
+                    sed -f enable-videoqual.sed -i $WEBCFG
+                    sed -i "s@^\( *\)\/\/ \( *preferredCodec: \).*@\1\2'VP9',@" $WEBCFG
                   fi
                   sleep 1
                   # Deploy users
