--- a/jitsi-stack.yml
+++ b/jitsi-stack.yml
@@ -438,7 +438,7 @@ resources:
                   if test -n "jitsi_watermark_link"; then
                     sed -i "s@JITSI_WATERMARK_LINK: '.*'@JITSI_WATERMARK_LINK: 'jitsi_watermark_link'@" $WEBIFCFG
                   fi
-                  if test -b "enable_vp9"; then
+                  if test -n "enable_vp9" != "0"; then
                     sed -f enable-videoqual.sed -i $WEBCFG
                     sed -f stun-comma.sed -i $WEBCFG
                     sed -i "s@^\( *\)\/\/ \( *preferredCodec: \).*@\1\2'VP9'@" $WEBCFG
