--- a/jitsi-stack.yml
+++ b/jitsi-stack.yml
@@ -111,6 +111,11 @@ parameters:
     #default: stun.stunprotocol.org:3478,stun.services.mozilla.com:3478
     default: stun.hosteurope.de:3478,stun.1und1.de:3478,stun.xs4all.nl,stun.linphone.org:3478,stun.t-online.de:3478
 
+  # Use STUN servers also for p2p
+  use_stun_p2p:
+    type: number
+    default: 0
+
   # Fill these vars if you want to set up a bridge to SIP
   jigasi_sip_uri:
     type: string
@@ -205,6 +210,12 @@ resources:
             permissions: 0644
           - content: {get_file: enable-videoqual.sed}
             path: /root/enable-videoqual.sed
+            permissions: 0644
+          - content: {get_file: enable-lastN.sed}
+            path: /root/enable-lastN.sed
+            permissions: 0644
+          - content: {get_file: enable-bitrate-limits.sed}
+            path: /root/enable-bitrate-limits.sed
             permissions: 0644
           - content: {get_file: stun-comma.sed}
             path: /root/stun-comma.sed
@@ -362,6 +373,8 @@ resources:
                   jigasi_sip_uri: {get_param: jigasi_sip_uri}
                   jigasi_default_room: {get_param: jigasi_default_room}
                   enable_vp9: {get_param: enable_vp9}
+                  stun_servers: {get_param: stun_servers}
+                  use_stun_p2p: {get_param: use_stun_p2p}
                 template: |
                   #!/usr/bin/env bash
                   export USER=root
@@ -429,6 +442,8 @@ resources:
                   fi
                   if test -n "tweak_channelLastN" -a "tweak_channelLastN" != "-1"; then
                     sed -i 's@channelLastN: [-0-9]*@channelLastN: tweak_channelLastN@' $WEBCFG
+                  else
+                    sed -f enable-lastN.sed -i $WEBCFG
                   fi
                   sed -i 's@^ */* *requireDisplayName:.*$@    requireDisplayName: true,@' $WEBCFG
                   sed -i 's@^config\.requireDisplayName = .*$@config.requireDisplayName = true;@' $WEBCFG
@@ -438,10 +453,16 @@ resources:
                   if test -n "jitsi_watermark_link"; then
                     sed -i "s@JITSI_WATERMARK_LINK: '.*'@JITSI_WATERMARK_LINK: 'jitsi_watermark_link'@" $WEBIFCFG
                   fi
-                  if test -n "enable_vp9" != "0"; then
+                  if test "enable_vp9" != "0"; then
                     sed -f enable-videoqual.sed -i $WEBCFG
                     sed -f stun-comma.sed -i $WEBCFG
                     sed -i "s@^\( *\)\/\/ \( *preferredCodec: \).*@\1\2'VP9'@" $WEBCFG
+                    sed -f enable-bitrate-limits.sed -i $WEBCFG
+                  fi
+                  if test "use_stun_p2p" != "0"; then
+                    echo -n "config.p2p.stunServers = [" >> $WEBCFG
+                    echo -n "stun_servers"  | sed "s/\([^,]*\)/ { urls: 'stun:\1' }/g" >> $WEBCFG
+                    echo " ];" >> $WEBCFG
                   fi
                   sleep 1
                   # Deploy users
