Pin jitsi-meet-web[-config] to 1.0.4900-1 for now.
The web frontend would not work for me otherwise.

Signed-off-by: Kurt Garloff <kurt@garloff.de>

--- a/jitsi-stack.yml
+++ b/jitsi-stack.yml
@@ -285,6 +285,8 @@ resources:
                   if test -z "letsenc_mail"; then
                     sed -i 's/\(certbot\-auto \-\-noninteractive.*$\)/timeout 21 \1 || true/' web/Dockerfile
                   fi
+                  # FIXME: Pin to stable-5765-1 version for jitsi-meet-web/-config
+                  sed -i '/apt-get/s/jitsi\-meet\-web\(\-config\|\) /jitsi-meet-web\1=1.0.4900-1 /g' web/Dockerfile
                   # Inject icon/watermark
                   if test -r /root/favicon.ico -a $(stat -c %s /root/favicon.ico) -gt 0; then
                     mkdir -p web/rootfs/usr/share/jitsi-meet/images
