--- a/jitsi-stack.yml
+++ b/jitsi-stack.yml
@@ -512,7 +512,7 @@ resources:
                   if test "enable_vp9" != "0"; then
                     sed -f enable-videoqual.sed -i $WEBCFG
                     #sed -f stun-comma.sed -i $WEBCFG
-                    sed -i "s@^\( *\)\/\/ \( *preferredCodec: \).*@\1\2'VP9',@" $WEBCFG
+                    sed -i "s@^\( *\)\/\/ \( *preferredCodec: \).*\$@\1\2'VP9',@" $WEBCFG
                     sed -f enable-bitrate-limits.sed -i $WEBCFG
                   fi
                   if test -n "vp9_bandwidth"; then
