--- a/jitsi-stack.yml
+++ b/jitsi-stack.yml
@@ -260,28 +260,28 @@ resources:
         write_files:
           - content: {get_file: cert.crt}
             path: /root/cert.crt
-            permissions: 0644
+            permissions: '0644'
           - content: {get_file: cert.key}
             path: /root/cert.key
-            permissions: 0600
+            permissions: '0600'
           - content: {get_file: enable-constraints.sed}
             path: /root/enable-constraints.sed
-            permissions: 0644
+            permissions: '0644'
           - content: {get_file: enable-videoqual.sed}
             path: /root/enable-videoqual.sed
-            permissions: 0644
+            permissions: '0644'
           - content: {get_file: enable-lastN.sed}
             path: /root/enable-lastN.sed
-            permissions: 0644
+            permissions: '0644'
           - content: {get_file: enable-bitrate-limits.sed}
             path: /root/enable-bitrate-limits.sed
-            permissions: 0644
+            permissions: '0644'
           - content: {get_file: stun-comma.sed}
             path: /root/stun-comma.sed
-            permissions: 0644
+            permissions: '0644'
           - content: {get_file: jvb-xmpp-domain.diff}
             path: /root/jvb-xmpp-domain.diff
-            permissions: 0644
+            permissions: '0644'
           - content:
               str_replace:
                 params:
@@ -336,7 +336,7 @@ resources:
                   # End workarounds
                   make JITSI_RELEASE=stable
             path: /root/build-jitsi.sh
-            permissions: 0700
+            permissions: '0700'
           - content:
               str_replace:
                 params:
@@ -425,7 +425,7 @@ resources:
                   DIS_HARV=$(echo disable_tcp_harvester | tr A-Z a-z)
                   sed -i "s/\(JVB_TCP_HARVESTER_DISABLED=\).*/\1$DIS_HARV/" .env
             path: /root/config-env.sh
-            permissions: 0700
+            permissions: '0700'
           - content:
               str_replace:
                 params:
@@ -607,7 +607,7 @@ resources:
                   # Signal completion
                   wc_notify --data-binary '{"status": "SUCCESS"}'
             path: /root/run.sh
-            permissions: 0700
+            permissions: '0700'
           - content:
               str_replace:
                 params:
@@ -625,7 +625,7 @@ resources:
                     docker-compose -f ~/docker-compose.yml down
                   fi
             path: /root/down.sh
-            permissions: 0750
+            permissions: '0750'
           - content: |
               #!/bin/bash
               if test "$1" = "status"; then
@@ -639,7 +639,7 @@ resources:
                 exit 3
               fi
             path: /etc/init.d/boot.local
-            permissions: 0755
+            permissions: '0755'
           - content:
               str_replace:
                 params:
@@ -649,15 +649,15 @@ resources:
                     "mtu": docker_mtu
                   }
             path: /tmp/daemon.json
-            permissions: 0644
+            permissions: '0644'
           - encoding: gz+b64
             content: {get_file: watermark.svg.gz}
             path: /root/watermark.svg
-            permissions: 0644
+            permissions: '0644'
           - encoding: gz+b64
             content: {get_file: favicon.ico.gz}
             path: /root/favicon.ico
-            permissions: 0644
+            permissions: '0644'
           - content: |
               #!/bin/bash
               DEV=$(ip route show default | head -n1 | sed 's/^.*dev \([^ ]*\).*$/\1/')
@@ -666,11 +666,25 @@ resources:
                   sed -i "s/: 0/: $MTU/" /tmp/daemon.json
               fi
             path: /root/set_mtu.sh
-            permissions: 0755
+            permissions: '0755'
+          - content: |
+              #!/bin/bash
+              declare -i ctr=0
+              echo -n "Waiting for DNS to work: "
+              while test $ctr -le 360; do
+                if getent hosts download.opensuse.org >/dev/null 2>&1; then break; fi
+                echo -n "."
+                sleep 10
+                let ctr+=1
+              done
+              if test $ctr -gt 360; then echo "FAIL"; exit 1; else echo "SUCCESS"; fi
+            path: /root/wait-dns.sh
+            permissions: '0755'
         runcmd:
           - "/root/set_mtu.sh"
           - "mv /tmp/daemon.json /etc/docker/daemon.json"
           - "systemctl enable docker"
+          - "/root/wait-dns.sh"
           - "/root/build-jitsi.sh"
           - "/root/config-env.sh"
           - "sed -i \"/After=/iAfter=docker.service\" /usr/lib/systemd/system/rc-local.service"
