--- a/jitsi-stack.yml
+++ b/jitsi-stack.yml
@@ -335,10 +335,11 @@ resources:
                   # jvbMaxmem tweaks
                   JVBMM=tweak_jvbMaxmem
                   JVBMM=${JVBMM%m}
-                  if test "$JVBMM" != "0"; then
+                  # Avoid crazily low values
+                  if test $JVBMM != 0 -a $JVBMM -ge 1536; then
                     mkdir -p jvb/rootfs/usr/share/jitsi-videobridge/lib/
                     echo -e "# Mem mem for JVB (64bit Linux Java -Xmx), default 3072m\nVIDEOBRIDGE_MAX_MEMORY=${JVBMM}m\n" > jvb/rootfs/usr/share/jitsi-videobridge/lib/videobridge.rc
-                    echo -e "# Enable this for debugging\n# VIDEOBRIDGE_DEBUG_OPTIONS="-Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=8000" >> jvb/rootfs/usr/share/jitsi-videobridge/lib/videobridge.rc
+                    echo -e "# Enable this for debugging\n# VIDEOBRIDGE_DEBUG_OPTIONS=\"-Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=8000\"" >> jvb/rootfs/usr/share/jitsi-videobridge/lib/videobridge.rc
                   fi
                   make JITSI_RELEASE=stable
             path: /root/build-jitsi.sh
